<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiquidCommunications</string>
    <string name="action_settings">Settings</string>
    <string name="import_button">Import</string>
    <string name="skip_button">No Thanks</string>
    <string name="default_app_button">Set Default</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="import_smsmms">Import Sms/Mms</string>
    <string name="set_default"> Set as Default Messaging App </string>
    <string name="dialog_contact_import">Would you like LiquidCommunications to import your current contact list for you?</string>
    <string name="dialog_default_app">Would you like to set LiquidCommunication to be your default messaging app?</string>
    <string name="dialog_smsmms_import">Would you like LiquidCommunications to import your current Sms/Mms conversations for you?</string>
    <string name="title_activity_contact_importer">ContactImporter</string>
    <string name="title_activity_sms_mms_importer">SmsMmsImporter</string>
    <string name="title_activity_set_default_app">SetDefaultApp</string>
    <string name="hello_world">Hello world!</string>

    // SQL tables    <string name="sqlContacts">create table Contacts (_id INTEGER primary key, LQ_Name TEXT, LQ_ContactPhoto BLOB, LQ_HasNumber INTEGER, LQ_Number TEXT, LQ_Email TEXT, LQ_HasContacted INTEGER, LQ_Contacted INTEGER, LQ_LastContacted DATE)</string>
    <string name="sqlMms">create table Mms (_id INTEGER primary key, LQ_id INTEGER, LQ_Thread_ID INTEGER, LQ_Date DATE, LQ_Name TEXT, LQ_Number TEXT, LQ_Message TEXT, LQ_Picture BLOB, LQ_Type INTEGER)</string>
    <string name="sqlSms">create table Sms (_id INTEGER primary key, LQ_id INTEGER, LQ_Thread_ID INTEGER, LQ_Name TEXT, LQ_Number TEXT, LQ_Message TEXT, LQ_Type INTEGER, LQ_Date DATE, LQ_DateSent Date, LQ_HasRead)</string>
    //header strings    <string name="quick_connect">QuickConnect</string>
    <string name="liquid_contacts">LiquidContacts</string>
    <string name="liquid_text">LiquidText</string>
    // Sub-Header strings    <string name="sub_quick_connect">(QC)</string>
    <string name="sub_liquid_contacts">(LC)</string>
    <string name="sub_liquid_text">(LT)</string>
    //footer strings    <string name="footer_text">Text</string>
    <string name="footer_email">Email</string>
    <string name="footer_social">Social</string>
    <string name="footer_call">Call</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    // Query Contact DataBase

    // Stored Phone Types    <string name="strPhoneCustom">_0</string>
    <string name="strPhoneHome">_1</string>
    <string name="strPhoneCell">_2</string>
    <string name="strPhoneWork">_3</string>
    <string name="strFaxWork">_4</string>
    <string name="strFaxHome">_5</string>
    <string name="strPager">_6</string>
    <string name="strPhoneOther">_7</string>
    <string name="strPhoneCallBack">_8"</string>
    <string name="title_activity_fullscreen_activity_test">FullscreenActivityTest</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_contact_loading_screen">ContactLoadingScreen</string>
    <string name="title_activity_sms_mms_stream">SmsMmsStream</string>

</resources>
