<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Activities.FooterContainer">

    <!-- Footer Container -->
   <LinearLayout
       android:id="@+id/footer"
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:layout_gravity="bottom"
       android:background="#BF808285"
       android:orientation="horizontal">

       <!-- Text Button -->
       <Button
           style="?android:attr/buttonStyleSmall"
           android:id="@+id/btnNewText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_margin="@dimen/footer_button_margin"
           android:layout_gravity="center_vertical"
           android:text="@string/footer_text"
           android:textSize="@dimen/footer_text_size"
           android:textStyle="bold"
           android:textColor="@color/contact_name"
           android:background="@drawable/text_input_background"
           android:onClick="clear" />

       <!-- Email Button -->
       <Button
           style="?android:attr/buttonStyleSmall"
           android:id="@+id/btnNewEmail"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_margin="@dimen/footer_button_margin"
           android:layout_gravity="center_vertical"
           android:text="@string/footer_email"
           android:textSize="@dimen/footer_text_size"
           android:textColor="@color/contact_name"
           android:textStyle="bold"
           android:background="@drawable/text_input_background"
           android:onClick="clear" />

       <!-- Call Button -->
       <Button
           style="?android:attr/buttonStyleSmall"
           android:id="@+id/btnNewCall"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_margin="@dimen/footer_button_margin"
           android:layout_gravity="center_vertical"
           android:text="@string/footer_call"
           android:textSize="@dimen/footer_text_size"
           android:textStyle="bold"
           android:textColor="@color/contact_name"
           android:background="@drawable/text_input_background"
           android:onClick="clear" />

       <!-- Social Button -->
       <Button
           style="?android:attr/buttonStyleSmall"
           android:id="@+id/btnNewSocial"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_margin="@dimen/footer_button_margin"
           android:layout_gravity="center_vertical"
           android:text="@string/footer_social"
           android:textSize="@dimen/footer_text_size"
           android:textStyle="bold"
           android:textColor="@color/contact_name"
           android:background="@drawable/text_input_background"
           android:onClick="clear" />

   </LinearLayout>

</FrameLayout>
