<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.LocallyGrownStudios.liquidcommunications.Activities.ContactImporter">

    <FrameLayout
        android:id="@+id/frameSetDefault"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/container_import">

        <TextView

            android:id="@+id/dialogSetDefault"
            android:layout_width="wrap_content"
            android:textSize="7pt"
            android:layout_marginLeft="20dp"
            android:padding="15dp"
            android:layout_marginRight="20dp"
            android:translationY="-15dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_default_app"
            android:textColor="#000000"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/titleSetDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/set_default"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textSize="9pt"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_gravity="left|top" />

    </FrameLayout>

    <Button
        android:id="@+id/btnSetDefault"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_alignBottom="@+id/frameSetDefault"
        android:layout_centerHorizontal="true"
        android:translationY="-15dp"
        android:translationX="-55dp"
        android:background="@drawable/button_standard"
        android:text="@string/set_default"/>

    <Button
        android:id="@+id/btnSkipSetDefault"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_alignBottom="@+id/frameSetDefault"
        android:layout_centerHorizontal="true"
        android:translationY="-15dp"
        android:translationX="85dp"
        android:background="@drawable/button_standard"
        android:text="@string/skip_button"/>


</RelativeLayout>
