<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:scrollbarSize="0dp"
    tools:context=".ContactManager">

    <RelativeLayout
        android:id="@+id/LMheader"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_height"
        android:background="#BF808285"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/LiquidManagerHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/liquid_text"
            android:textSize="11pt"
            android:textStyle="bold"
            android:textColor="#BCBEC0"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/QuickConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/sub_header_margin_top"
            android:layout_marginLeft="@dimen/sub_header_margin_horiz"
            android:text="@string/quick_connect"
            android:textSize="@dimen/header_sub_text_size"
            android:textStyle="bold"
            android:textColor="@color/header_sub_text" />

        <TextView
            android:id="@+id/liquidContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/liquidContacts"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/sub_header_margin_horiz"
            android:layout_marginTop="@dimen/sub_header_margin_top"
            android:text="@string/liquid_contacts"
            android:textSize="@dimen/header_sub_text_size"
            android:textColor="@color/header_sub_text"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/header_arrow_left"
            android:src="@drawable/header_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/LiquidManagerHeader" />

        <ImageView
            android:id="@+id/header_arrow_right"
            android:src="@drawable/header_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/LiquidManagerHeader"
            android:layout_toRightOf="@+id/LiquidManagerHeader"
            android:rotation="180" />


    </RelativeLayout>

    <ListView
        android:id="@+id/contactListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:fastScrollEnabled="false"
        android:layout_below="@+id/LMheader"
        android:layout_above="@+id/footer" />



</RelativeLayout>
